err/opacity-calculator.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/opacity_calculator'...
Compiling './lib/python3.5/site-packages/opacity_calculator/DataClass_Opacity.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (DataClass_Opacity.py, line 72)
Compiling './lib/python3.5/site-packages/opacity_calculator/DataClass_SQLData.py'...
***   File "./lib/python3.5/site-packages/opacity_calculator/DataClass_SQLData.py", line 126
    except lite.Error, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/opacity_calculator/main.py'...
***   File "./lib/python3.5/site-packages/opacity_calculator/main.py", line 20
    print '{:*^150}'.format('')
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/opacity_calculator-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
